Fix short rankings on mobile
The table previously stretched in height, now they take the minimum
amount of space.

--- a/css/rankings.css
+++ b/css/rankings.css
@@ -90,7 +90,7 @@ td > a:hover > span:first-of-type { text-decoration: underline }
         grid-template-columns: auto auto 1fr;
     }
 
-    main { grid-template-columns: 1fr }
+    main { grid-template: min-content min-content 1fr / 1fr }
 
     main nav { display: none }
 }
